k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ndbk-bmd-app
  labels:
    app.kubernetes.io/name: ndbk-bmd-app
    app.kubernetes.io/part-of: ndbk-bmd
