k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ndbk-bmd-app
  namespace: ndbk-bmd-app
  labels:
    app.kubernetes.io/name: ndbk-bmd-app
    app.kubernetes.io/part-of: ndbk-bmd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ndbk-bmd-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
