k8s/ingress.yaml
apiVersion: networking.ndbk-bmds.io/v1
kind: Ingress
metadata:
  name: ndbk-bmd-app
  namespace: ndbk-bmd-app
  labels:
    app.kubernetes.io/name: ndbk-bmd-app
    app.kubernetes.io/part-of: ndbk-bmd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ndbk-bmd-app
                port:
                  number: 80
